# lix

./: .gitignore  CMakeLists.txt  Makefile  server.js
asproc/: CMakeLists.txt  Makefile  bpy_gen_levels.py  gen_assets.mk
asproc/include/: common.h  fontproc.h  gltfexport.h  imageproc.h  objectproc.h  plyproc.h  shaderproc.h  stb_image.h  types.h
asproc/public/: gltftypes.h  ttf.h
asproc/src/: asproc.cpp  common.cpp  fontproc.cpp  gltfexport.cpp  imageproc.cpp  objectproc.cpp  plyproc.cpp  shaderproc.cpp
asproc/test/: test.cpp
asproc/test/fonts/: arial.json
asproc/test/objects/: cube.gltf
asproc/test/shaders/: object_color.vert  texture_object.frag
asproc/win/: gen_assets.bat
assets/objects/bone/: bone.gltf
assets/objects/bush/: bush.gltf
assets/objects/donut/: donut.gltf
assets/objects/monkey_stage/: monkey_stage.gltf
assets/objects/moose/: moose.gltf
assets/objects/planets/: planets.gltf
assets/objects/spikes/: spikes.gltf
assets/shaders/: blur.frag  inst.vert  line.frag  object.vert  object_color.vert  screen.frag  testtypes.frag  testtypes.vert  text.vert  text_wavy.vert  texture_object.frag
ecs/: ecsentity.h  ecsslice.h
engine/: CMakeLists.txt
engine/core/: glbuffer.cpp  glbuffer.h  glelement.h  glerror.cpp  glerror.h  glframebuffer.cpp  glframebuffer.h  glrenderbuffer.cpp  glrenderbuffer.h  glshaderprogram.cpp  glshaderprogram.h  gltexture.h  gluniformbuffer.cpp  gluniformbuffer.h  glvertexarray.cpp  glvertexarray.h  glvertexarraybuffer.cpp  glvertexarraybuffer.h
engine/ecs/: ecs.cpp  ecscomponent.h  ecsconstants.h  ecsentity.h  ecsslice.h  ecssystem.h
engine/feature/: glconsole.cpp  glconsole.h  gleditor.cpp  gleditor.h  gltime.cpp  gltime.h  gltimer.cpp  gltimer.h
engine/format/: gltfloader.cpp  gltfloader.h
engine/impact/: aabb.cpp  aabb.h  capsule.cpp  capsule.h  charactercontroller.h  collision.cpp  collision.h  collision2d.cpp  collision2d.h  collisionsystem.cpp  collisionsystem.h  convexhull.cpp  convexhull.h  halfedge.h  inertia.cpp  inertia.h  physicsengine.cpp  physicsengine.h  polygon.cpp  polygon.h  primer.cpp  primer.h  quickhull.cpp  quickhull.h  response.h  rigidbody.h  shape.cpp  shape.h  sphere.cpp  sphere.h
engine/render/: glanimation.h  glapplication.cpp  glapplication.h  glarrow.cpp  glarrow.h  glblurpass.cpp  glblurpass.h  glcamera.h  glcolor.cpp  glcolor.h  glcube.cpp  glcube.h  glfont.cpp  glfont.h  glgeometry.cpp  glgeometry.h  glinputadapter.h  glinstancednoderendering.cpp  glinstancednoderendering.h  glinstancedrendering.cpp  glinstancedrendering.h  glmaterial.cpp  glmaterial.h  glmesh.cpp  glmesh.h  glnode.cpp  glnode.h  glpolygonrendering.cpp  glpolygonrendering.h  glrendering.cpp  glrendering.h  glskin.cpp  glskin.h  glskinanimation.cpp  glskinanimation.h  gltext.cpp  gltext.h  gltextrendering.cpp  gltextrendering.h  gltexture.cpp  (+3 more)
engine/utility/: ez_string.h  infinite_iterator.h
examples/: CMakeLists.txt  Makefile
examples/assets/fonts/: josefin_sans.json
examples/assets/levels/: home.blend  home.blend1  level.blend  level.blend1
examples/assets/objects/arrow/: arrow.blend
examples/assets/objects/bridge/: bridge.blend  bridge.blend1  bridge.gltf
examples/assets/objects/chinese_tea_table/: chinese_tea_table.gltf
examples/assets/objects/donut/: donut.blend  donut.blend1  donut.gltf
examples/assets/objects/home/: home.gltf
examples/assets/objects/level/: level.gltf
examples/assets/objects/lilbro/: lilbro.blend  lilbro.blend1  lilbro.gltf
examples/assets/objects/macman/: macman.blend  macman.blend1  macman.gltf
examples/assets/objects/platform/: platform.blend  platform.blend1  platform.gltf
examples/assets/objects/rat/: rat.blend  rat.blend1  rat.gltf
examples/assets/objects/spyro_ps1/: spyro_ps1.gltf
examples/assets/shaders/: debug_vao.vert  line.vert  screen.vert  text_wavy.vert
examples/example_all/: CMakeLists.txt  example_all.cpp
examples/example_basic/: CMakeLists.txt  example_basic.cpp
examples/example_collision/: CMakeLists.txt  example_collision.cpp
examples/example_platformer/: CMakeLists.txt  example_platformer.cpp
examples/example_skeleton/: CMakeLists.txt  example_skeleton.cpp
gltf/: gltfloader.h  gltftypes.h
impact/: collision.cpp  polygon.cpp  polygon.h  shape.h
include/: glapplication.h  glblurpass.h  glbuffer.h  glcolor.h  glelement.h  glfont.h  glframebuffer.h  glinputadapter.h  glmaterial.h  glmesh.h  glpolygonrendering.h  glrenderbuffer.h  glshaderprogram.h  glskin.h  glskinanimation.h  gltext.h  gltextrendering.h  gltexture.h  gltrs.h  gltypes.h  glvertexarray.h  glvertexarraybuffer.h
json/: CMakeLists.txt  json.cpp  json.h
src/: glapplication.cpp  glbuffer.cpp  glcolor.cpp  glelement.cpp  glfont.cpp  glframebuffer.cpp  glinstancedrendering.cpp  glmaterial.cpp  glmesh.cpp  glrendering.cpp  glshaderprogram.cpp  glskin.cpp  glskinanimation.cpp  gltext.cpp  gltexture.cpp  gltrs.cpp  gluniformbuffer.cpp  glvertexarray.cpp  glvertexarraybuffer.cpp
test/: CMakeLists.txt  Makefile  test_all.cpp  test_audio.cpp  test_basic.cpp  test_time.cpp  unit_test.cpp  unit_test.h
test/assets/fonts/: arial.json
test/assets/objects/animated_cube/: animated_cube.gltf
test/assets/objects/arrow/: arrow.blend1  arrow.gltf
test/assets/shaders/: anim.vert  bloom.frag  debug_vao.frag  debug_vao.vert  screen.vert  text.frag  text.vert  text_border.frag  texture_object.frag
test/test_all/: CMakeLists.txt  test.cpp
test/test_basic/: CMakeLists.txt  test.cpp
test/test_collision/: CMakeLists.txt  test_collision.cpp
test/unit_test/: CMakeLists.txt  test_time.cpp  unit_test.cpp  unit_test.h  unit_test_impact.cpp
tools/: CMakeLists.txt
tools/cdet/: CMakeLIsts.txt  aabb.json  capsule.json  cdet.cpp  input.json  poly.json  sphere.json
ttf/: ttf.h
