cmake_minimum_required(VERSION 3.22) 

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    set(ASPROC_HOME ${CMAKE_CURRENT_SOURCE_DIR}/asproc)
    set(GLM_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/glm)
else()
    set(ASPROC_HOME ${CMAKE_CURRENT_SOURCE_DIR}/asproc PARENT_SCOPE)
    set(GLM_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/glm PARENT_SCOPE)
endif()
option(LIX_BUILD_TESTS "Build the test suite" ON)

project(lix)

add_subdirectory(json)
add_subdirectory(asproc)
add_subdirectory(engine)
if(LIX_BUILD_TESTS)
    add_subdirectory(test)
endif()