cmake_minimum_required(VERSION 3.22) 

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(ASPROC_HOME ${CMAKE_CURRENT_SOURCE_DIR}/asproc)
set(GLM_HOME ${CMAKE_CURRENT_SOURCE_DIR}/glm)
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    message(STATUS "Lix is top-level.")
else()
    set(ASPROC_HOME ${ASPROC_HOME} PARENT_SCOPE)
    set(GLM_HOME ${GLM_HOME} PARENT_SCOPE)
endif()
option(LIX_BUILD_TESTS "Build the test suite" ON)

project(lix)

add_subdirectory(json)
add_subdirectory(asproc)
add_subdirectory(engine)
if(LIX_BUILD_TESTS)
    add_subdirectory(test)
endif()
